docs/api/qiskit/0.40/transpiler_passes.md
---
title: passes
description: API reference for qiskit.transpiler.passes
in_page_toc_min_heading_level: 1
python_api_type: module
python_api_name: qiskit.transpiler.passes
---

<span id="module-qiskit.transpiler.passes" />

<span id="qiskit-transpiler-passes" />

# Transpiler Passes

<span id="module-qiskit.transpiler.passes" />

`qiskit.transpiler.passes`

## Layout Selection (Placement)

|                                                                                                                                                |                                                                                                                        |
| ---------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------- |
| [`SetLayout`](qiskit.transpiler.passes.SetLayout "qiskit.transpiler.passes.SetLayout")(\*args, \*\*kwargs)                                     | Set the `layout` property to the given layout.                                                                         |
| [`TrivialLayout`](qiskit.transpiler.passes.TrivialLayout "qiskit.transpiler.passes.TrivialLayout")(\*args, \*\*kwargs)                         | Choose a Layout by assigning `n` circuit qubits to device qubits `0, .., n-1`.                                         |
| [`DenseLayout`](qiskit.transpiler.passes.DenseLayout "qiskit.transpiler.passes.DenseLayout")(\*args, \*\*kwargs)                               | Choose a Layout by finding the most connected subset of qubits.                                                        |
| [`NoiseAdaptiveLayout`](qiskit.transpiler.passes.NoiseAdaptiveLayout "qiskit.transpiler.passes.NoiseAdaptiveLayout")(\*args, \*\*kwargs)       | Choose a noise-adaptive Layout based on current calibration data for the backend.                                      |
| [`SabreLayout`](qiskit.transpiler.passes.SabreLayout "qiskit.transpiler.passes.SabreLayout")(\*args, \*\*kwargs)                               | Choose a Layout via iterative bidirectional routing of the input circuit.                                              |
| [`CSPLayout`](qiskit.transpiler.passes.CSPLayout "qiskit.transpiler.passes.CSPLayout")(\*args, \*\*kwargs)                                     | If possible, chooses a Layout as a CSP, using backtracking.                                                            |
| [`VF2Layout`](qiskit.transpiler.passes.VF2Layout "qiskit.transpiler.passes.VF2Layout")(\*args, \*\*kwargs)                                     | A pass for choosing a Layout of a circuit onto a Coupling graph, as a a subgraph isomorphism problem, solved by VF2++. |
| [`ApplyLayout`](qiskit.transpiler.passes.ApplyLayout "qiskit.transpiler.passes.ApplyLayout")(\*args, \*\*kwargs)                               | Transform a circuit with virtual qubits into a circuit with physical qubits.                                           |
| [`Layout2qDistance`](qiskit.transpiler.passes.Layout2qDistance "qiskit.transpiler.passes.Layout2qDistance")(\*args, \*\*kwargs)                | Evaluate how good the layout selection was.                                                                            |
| [`EnlargeWithAncilla`](qiskit.transpiler.passes.EnlargeWithAncilla "qiskit.transpiler.passes.EnlargeWithAncilla")(\*args, \*\*kwargs)          | Extend the dag with virtual qubits that are in layout but not in the circuit yet.                                      |
| [`FullAncillaAllocation`](qiskit.transpiler.passes.FullAncillaAllocation "qiskit.transpiler.passes.FullAncillaAllocation")(\*args, \*\*kwargs) | Allocate all idle nodes from the coupling map as ancilla on the layout.                                                |

## Routing

|                                                                                                                                                    |                                                                                        |
| -------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------- |
| [`BasicSwap`](qiskit.transpiler.passes.BasicSwap "qiskit.transpiler.passes.BasicSwap")(\*args, \*\*kwargs)                                         | Map (with minimum effort) a DAGCircuit onto a coupling\_map adding swap gates.         |
| [`LookaheadSwap`](qiskit.transpiler.passes.LookaheadSwap "qiskit.transpiler.passes.LookaheadSwap")(\*args, \*\*kwargs)                             | Map input circuit onto a backend topology via insertion of SWAPs.                      |
| [`StochasticSwap`](qiskit.transpiler.passes.StochasticSwap "qiskit.transpiler.passes.StochasticSwap")(\*args, \*\*kwargs)                          | Map a DAGCircuit onto a coupling\_map adding swap gates.                               |
| [`SabreSwap`](qiskit.transpiler.passes.SabreSwap "qiskit.transpiler.passes.SabreSwap")(\*args, \*\*kwargs)                                         | Map input circuit onto a backend topology via insertion of SWAPs.                      |
| [`BIPMapping`](qiskit.transpiler.passes.BIPMapping "qiskit.transpiler.passes.BIPMapping")(\*args, \*\*kwargs)                                      | Map a DAGCircuit onto a given `coupling_map`, allocating qubits and adding swap gates. |
| [`Commuting2qGateRouter`](qiskit.transpiler.passes.Commuting2qGateRouter "qiskit.transpiler.passes.Commuting2qGateRouter")(\[swap\_strategy, ...]) | A class to swap route one or more commuting gates to the coupling map.                 |

## Basis Change

|                                                                                                                                                      |                                                                                                            |
| ---------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------- |
| [`Unroller`](qiskit.transpiler.passes.Unroller "qiskit.transpiler.passes.Unroller")(\*args, \*\*kwargs)                                              | Unroll a circuit to a given basis.                                                                         |
| [`Unroll3qOrMore`](qiskit.transpiler.passes.Unroll3qOrMore "qiskit.transpiler.passes.Unroll3qOrMore")(\*args, \*\*kwargs)                            | Recursively expands 3q+ gates until the circuit only contains 2q or 1q gates.                              |
| [`Decompose`](qiskit.transpiler.passes.Decompose "qiskit.transpiler.passes.Decompose")(\[gates\_to\_decompose])                                      | Expand a gate in a circuit using its decomposition rules.                                                  |
| [`UnrollCustomDefinitions`](qiskit.transpiler.passes.UnrollCustomDefinitions "qiskit.transpiler.passes.UnrollCustomDefinitions")(\*args, \*\*kwargs) | Unrolls instructions with custom definitions.                                                              |
| [`BasisTranslator`](qiskit.transpiler.passes.BasisTranslator "qiskit.transpiler.passes.BasisTranslator")(\*args, \*\*kwargs)                         | Translates gates to a target basis by searching for a set of translations from a given EquivalenceLibrary. |
| [`TranslateParameterizedGates`](qiskit.transpiler.passes.TranslateParameterizedGates "qiskit.transpiler.passes.TranslateParameterizedGates")(\[...]) | Translate parameterized gates to a supported basis set.                                                    |

## Optimizations

|                                                                                                                                                                                 |                                                                                                                                                                                                                                                                                                                                                 |
| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [`Optimize1qGates`](qiskit.transpiler.passes.Optimize1qGates "qiskit.transpiler.passes.Optimize1qGates")(\*args, \*\*kwargs)                                                    | Optimize chains of single-qubit u1, u2, u3 gates by combining them into a single gate.                                                                                                                                                                                                                                                          |
| [`Optimize1qGatesDecomposition`](qiskit.transpiler.passes.Optimize1qGatesDecomposition "qiskit.transpiler.passes.Optimize1qGatesDecomposition")(\*args, \*\*kwargs)             | Optimize chains of single-qubit gates by combining them into a single gate.                                                                                                                                                                                                                                                                     |
| [`Collect1qRuns`](qiskit.transpiler.passes.Collect1qRuns "qiskit.transpiler.passes.Collect1qRuns")(\*args, \*\*kwargs)                                                          | Collect one-qubit subcircuits.                                                                                                                                                                                                                                                                                                                  |
| [`Collect2qBlocks`](qiskit.transpiler.passes.Collect2qBlocks "qiskit.transpiler.passes.Collect2qBlocks")(\*args, \*\*kwargs)                                                    | Collect two-qubit subcircuits.                                                                                                                                                                                                                                                                                                                  |
| [`CollectMultiQBlocks`](qiskit.transpiler.passes.CollectMultiQBlocks "qiskit.transpiler.passes.CollectMultiQBlocks")(\*args, \*\*kwargs)                                        | Collect sequences of uninterrupted gates acting on groups of qubits.                                                                                                                                                                                                                                                                            |
| [`CollectLinearFunctions`](qiskit.transpiler.passes.CollectLinearFunctions "qiskit.transpiler.passes.CollectLinearFunctions")(\*args, \*\*kwargs)                               | Collect blocks of linear gates ([`CXGate`](qiskit.circuit.library.CXGate "qiskit.circuit.library.CXGate") and [`SwapGate`](qiskit.circuit.library.SwapGate "qiskit.circuit.library.SwapGate") gates) and replaces them by linear functions ([`LinearFunction`](qiskit.circuit.library.LinearFunction "qiskit.circuit.library.LinearFunction")). |
| [`CollectCliffords`](qiskit.transpiler.passes.CollectCliffords "qiskit.transpiler.passes.CollectCliffords")(\*args, \*\*kwargs)                                                 | Collects blocks of Clifford gates and replaces them by a [`Clifford`](qiskit.quantum_info.Clifford "qiskit.quantum_info.Clifford") object.                                                                                                                                                                                                      |
| [`CollectAndCollapse`](qiskit.transpiler.passes.CollectAndCollapse "qiskit.transpiler.passes.CollectAndCollapse")(\*args, \*\*kwargs)                                           | A general transpiler pass to collect and to consolidate blocks of nodes in a circuit.                                                                                                                                                                                                                                                           |
| [`ConsolidateBlocks`](qiskit.transpiler.passes.ConsolidateBlocks "qiskit.transpiler.passes.ConsolidateBlocks")(\*args, \*\*kwargs)                                              | Replace each block of consecutive gates by a single Unitary node.                                                                                                                                                                                                                                                                               |
| [`CXCancellation`](qiskit.transpiler.passes.CXCancellation "qiskit.transpiler.passes.CXCancellation")(\*args, \*\*kwargs)                                                       | Cancel back-to-back cx gates in dag.                                                                                                                                                                                                                                                                                                            |
| [`InverseCancellation`](qiskit.transpiler.passes.InverseCancellation "qiskit.transpiler.passes.InverseCancellation")(gates\_to\_cancel)                                         | Cancel specific Gates which are inverses of each other when they occur back-to- back.                                                                                                                                                                                                                                                           |
| [`CommutationAnalysis`](qiskit.transpiler.passes.CommutationAnalysis "qiskit.transpiler.passes.CommutationAnalysis")(\*args, \*\*kwargs)                                        | Analysis pass to find commutation relations between DAG nodes.                                                                                                                                                                                                                                                                                  |
| [`CommutativeCancellation`](qiskit.transpiler.passes.CommutativeCancellation "qiskit.transpiler.passes.CommutativeCancellation")(\*args, \*\*kwargs)                            | Cancel the redundant (self-adjoint) gates through commutation relations.                                                                                                                                                                                                                                                                        |
| [`CommutativeInverseCancellation`](qiskit.transpiler.passes.CommutativeInverseCancellation "qiskit.transpiler.passes.CommutativeInverseCancellation")(\*args, \*\*kwargs)       | Cancel pairs of inverse gates exploiting commutation relations.                                                                                                                                                                                                                                                                                 |
| [`Optimize1qGatesSimpleCommutation`](qiskit.transpiler.passes.Optimize1qGatesSimpleCommutation "qiskit.transpiler.passes.Optimize1qGatesSimpleCommutation")(\*args, \*\*kwargs) | Optimizes 1Q gate strings interrupted by 2Q gates by commuting the components and re- synthesizing the results.                                                                                                                                                                                                                                 |
| [`RemoveDiagonalGatesBeforeMeasure`](qiskit.transpiler.passes.RemoveDiagonalGatesBeforeMeasure "qiskit.transpiler.passes.RemoveDiagonalGatesBeforeMeasure")(\*args, \*\*kwargs) | Remove diagonal gates (including diagonal 2Q gates) before a measurement.                                                                                                                                                                                                                                                                       |
| [`RemoveResetInZeroState`](qiskit.transpiler.passes.RemoveResetInZeroState "qiskit.transpiler.passes.RemoveResetInZeroState")(\*args, \*\*kwargs)                               | Remove reset gate when the qubit is in zero state.                                                                                                                                                                                                                                                                                              |
| [`CrosstalkAdaptiveSchedule`](qiskit.transpiler.passes.CrosstalkAdaptiveSchedule "qiskit.transpiler.passes.CrosstalkAdaptiveSchedule")(\*args, \*\*kwargs)                      | Crosstalk mitigation through adaptive instruction scheduling.                                                                                                                                                                                                                                                                                   |
| [`HoareOptimizer`](qiskit.transpiler.passes.HoareOptimizer "qiskit.transpiler.passes.HoareOptimizer")(\*args, \*\*kwargs)                                                       | This is a transpiler pass using Hoare logic circuit optimization.                                                                                                                                                                                                                                                                               |
| [`TemplateOptimization`](qiskit.transpiler.passes.TemplateOptimization "qiskit.transpiler.passes.TemplateOptimization")(\*args, \*\*kwargs)                                     | Class for the template optimization pass.                                                                                                                                                                                                                                                                                                       |
| [`EchoRZXWeylDecomposition`](qiskit.transpiler.passes.EchoRZXWeylDecomposition "qiskit.transpiler.passes.EchoRZXWeylDecomposition")(\*args, \*\*kwargs)                         | Rewrite two-qubit gates using the Weyl decomposition.                                                                                                                                                                                                                                                                                           |
| [`ResetAfterMeasureSimplification`](qiskit.transpiler.passes.ResetAfterMeasureSimplification "qiskit.transpiler.passes.ResetAfterMeasureSimplification")(\*args, \*\*kwargs)    | This pass replaces reset after measure with a conditional X gate.                                                                                                                                                                                                                                                                               |
| [`OptimizeCliffords`](qiskit.transpiler.passes.OptimizeCliffords "qiskit.transpiler.passes.OptimizeCliffords")(\*args, \*\*kwargs)                                              | Combine consecutive Cliffords over the same qubits.                                                                                                                                                                                                                                                                                             |

## Calibration

|                                                                                                                                                      |                                                                                                              |
| ---------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------ |
| [`PulseGates`](qiskit.transpiler.passes.PulseGates "qiskit.transpiler.passes.PulseGates")(inst\_map)                                                 | Pulse gate adding pass.                                                                                      |
| [`RZXCalibrationBuilder`](qiskit.transpiler.passes.RZXCalibrationBuilder "qiskit.transpiler.passes.RZXCalibrationBuilder")(\[...])                   | Creates calibrations for RZXGate(theta) by stretching and compressing Gaussian square pulses in the CX gate. |
| [`RZXCalibrationBuilderNoEcho`](qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho "qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho")(\[...]) | Creates calibrations for RZXGate(theta) by stretching and compressing Gaussian square pulses in the CX gate. |

## Scheduling

|                                                                                                                                                        |                                                                                                                         |
| ------------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------- |
| [`TimeUnitConversion`](qiskit.transpiler.passes.TimeUnitConversion "qiskit.transpiler.passes.TimeUnitConversion")(inst\_durations)                     | Choose a time unit to be used in the following time-aware passes, and make all circuit time units consistent with that. |
| [`ALAPScheduleAnalysis`](qiskit.transpiler.passes.ALAPScheduleAnalysis "qiskit.transpiler.passes.ALAPScheduleAnalysis")(durations)                     | ALAP Scheduling pass, which schedules the **stop** time of instructions as late as possible.                            |
| [`ASAPScheduleAnalysis`](qiskit.transpiler.passes.ASAPScheduleAnalysis "qiskit.transpiler.passes.ASAPScheduleAnalysis")(durations)                     | ASAP Scheduling pass, which schedules the start time of instructions as early as possible..                             |
| [`PadDynamicalDecoupling`](qiskit.transpiler.passes.PadDynamicalDecoupling "qiskit.transpiler.passes.PadDynamicalDecoupling")(durations, dd\_sequence) | Dynamical decoupling insertion pass.                                                                                    |
| [`PadDelay`](qiskit.transpiler.passes.PadDelay "qiskit.transpiler.passes.PadDelay")(\[fill\_very\_end])                                                | Padding idle time with Delay instructions.                                                                              |
| [`ConstrainedReschedule`](qiskit.transpiler.passes.ConstrainedReschedule "qiskit.transpiler.passes.ConstrainedReschedule")(\[acquire\_alignment, ...]) | Rescheduler pass that updates node start times to conform to the hardware alignments.                                   |
| [`AlignMeasures`](qiskit.transpiler.passes.AlignMeasures "qiskit.transpiler.passes.AlignMeasures")(\[alignment])                                       | Measurement alignment.                                                                                                  |
| [`ValidatePulseGates`](qiskit.transpiler.passes.ValidatePulseGates "qiskit.transpiler.passes.ValidatePulseGates")(\[granularity, min\_length])         | Check custom gate length.                                                                                               |
| [`InstructionDurationCheck`](qiskit.transpiler.passes.InstructionDurationCheck "qiskit.transpiler.passes.InstructionDurationCheck")(\[...])            | Duration validation pass for reschedule.                                                                                |
| [`SetIOLatency`](qiskit.transpiler.passes.SetIOLatency "qiskit.transpiler.passes.SetIOLatency")(\[clbit\_write\_latency, ...])                         | Set IOLatency information to the input circuit.                                                                         |
| [`ALAPSchedule`](qiskit.transpiler.passes.ALAPSchedule "qiskit.transpiler.passes.ALAPSchedule")(\*args, \*\*kwargs)                                    | ALAP Scheduling pass, which schedules the **stop** time of instructions as late as possible.                            |
| [`ASAPSchedule`](qiskit.transpiler.passes.ASAPSchedule "qiskit.transpiler.passes.ASAPSchedule")(\*args, \*\*kwargs)                                    | ASAP Scheduling pass, which schedules the start time of instructions as early as possible..                             |
| [`DynamicalDecoupling`](qiskit.transpiler.passes.DynamicalDecoupling "qiskit.transpiler.passes.DynamicalDecoupling")(\*args, \*\*kwargs)               | Dynamical decoupling insertion pass.                                                                                    |

## Circuit Analysis

|                                                                                                                                          |                                                                                               |
| ---------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------- |
| [`Width`](qiskit.transpiler.passes.Width "qiskit.transpiler.passes.Width")(\*args, \*\*kwargs)                                           | Calculate the width of a DAG circuit.                                                         |
| [`Depth`](qiskit.transpiler.passes.Depth "qiskit.transpiler.passes.Depth")(\*args, \*\*kwargs)                                           | Calculate the depth of a DAG circuit.                                                         |
| [`Size`](qiskit.transpiler.passes.Size "qiskit.transpiler.passes.Size")(\*args, \*\*kwargs)                                              | Calculate the size of a DAG circuit.                                                          |
| [`CountOps`](qiskit.transpiler.passes.CountOps "qiskit.transpiler.passes.CountOps")(\*args, \*\*kwargs)                                  | Count the operations in a DAG circuit.                                                        |
| [`CountOpsLongestPath`](qiskit.transpiler.passes.CountOpsLongestPath "qiskit.transpiler.passes.CountOpsLongestPath")(\*args, \*\*kwargs) | Count the operations on the longest path in a DAGcircuit.                                     |
| [`NumTensorFactors`](qiskit.transpiler.passes.NumTensorFactors "qiskit.transpiler.passes.NumTensorFactors")(\*args, \*\*kwargs)          | Calculate the number of tensor factors of a DAG circuit.                                      |
| [`DAGLongestPath`](qiskit.transpiler.passes.DAGLongestPath "qiskit.transpiler.passes.DAGLongestPath")(\*args, \*\*kwargs)                | Return the longest path in a DAGcircuit as a list of DAGOpNodes, DAGInNodes, and DAGOutNodes. |

## Synthesis

|                                                                                                                                                                        |                                                                                                                                                                                |
| ---------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| [`UnitarySynthesis`](qiskit.transpiler.passes.UnitarySynthesis "qiskit.transpiler.passes.UnitarySynthesis")(\[basis\_gates, ...])                                      | Synthesize gates according to their basis gates.                                                                                                                               |
| [`LinearFunctionsSynthesis`](qiskit.transpiler.passes.LinearFunctionsSynthesis "qiskit.transpiler.passes.LinearFunctionsSynthesis")(\*args, \*\*kwargs)                | DEPRECATED: Synthesize linear functions.                                                                                                                                       |
| [`LinearFunctionsToPermutations`](qiskit.transpiler.passes.LinearFunctionsToPermutations "qiskit.transpiler.passes.LinearFunctionsToPermutations")(\*args, \*\*kwargs) | Promotes linear functions to permutations when possible.                                                                                                                       |
| [`HighLevelSynthesis`](qiskit.transpiler.passes.HighLevelSynthesis "qiskit.transpiler.passes.HighLevelSynthesis")(\*args, \*\*kwargs)                                  | Synthesize higher-level objects by choosing the appropriate synthesis method based on the object's name and the high-level-synthesis config of type `HLSConfig` (if provided). |
| [`SolovayKitaev`](qiskit.transpiler.passes.SolovayKitaev "qiskit.transpiler.passes.SolovayKitaev")(\[recursion\_degree, ...])                                          | Approximately decompose 1q gates to a discrete basis using the Solovay-Kitaev algorithm.                                                                                       |
| [`SolovayKitaevSynthesis`](qiskit.transpiler.passes.SolovayKitaevSynthesis "qiskit.transpiler.passes.SolovayKitaevSynthesis")()                                        | A Solovay-Kitaev Qiskit unitary synthesis plugin.                                                                                                                              |

## Synthesis Plugins

|                                                                                                                                          |                                                                                 |
| ---------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------- |
| [`SolovayKitaevSynthesis`](qiskit.transpiler.passes.SolovayKitaevSynthesis "qiskit.transpiler.passes.SolovayKitaevSynthesis")()          | A Solovay-Kitaev Qiskit unitary synthesis plugin.                               |
| [`BasicSynthesisPermutation`](qiskit.transpiler.passes.BasicSynthesisPermutation "qiskit.transpiler.passes.BasicSynthesisPermutation")() | The permutation synthesis plugin based on sorting.                              |
| [`ACGSynthesisPermutation`](qiskit.transpiler.passes.ACGSynthesisPermutation "qiskit.transpiler.passes.ACGSynthesisPermutation")()       | The permutation synthesis plugin based on the Alon, Chung, Graham method.       |
| [`KMSSynthesisPermutation`](qiskit.transpiler.passes.KMSSynthesisPermutation "qiskit.transpiler.passes.KMSSynthesisPermutation")()       | The permutation synthesis plugin based on the Kutin, Moulton, Smithline method. |

## Post Layout (Post transpile qubit selection)

|                                                                                                                        |                                                                                                                                          |
| ---------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------- |
| [`VF2PostLayout`](qiskit.transpiler.passes.VF2PostLayout "qiskit.transpiler.passes.VF2PostLayout")(\*args, \*\*kwargs) | A pass for choosing a Layout after transpilation of a circuit onto a Coupling graph, as a subgraph isomorphism problem, solved by VF2++. |

## Additional Passes

|                                                                                                                                                                           |                                                                                                                                                                          |
| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| [`CheckMap`](qiskit.transpiler.passes.CheckMap "qiskit.transpiler.passes.CheckMap")(\*args, \*\*kwargs)                                                                   | Check if a DAG circuit is already mapped to a coupling map.                                                                                                              |
| [`CheckCXDirection`](qiskit.transpiler.passes.CheckCXDirection "qiskit.transpiler.passes.CheckCXDirection")(\*args, \*\*kwargs)                                           | Deprecated: use [`qiskit.transpiler.passes.CheckGateDirection`](qiskit.transpiler.passes.CheckGateDirection "qiskit.transpiler.passes.CheckGateDirection") pass instead. |
| [`CheckGateDirection`](qiskit.transpiler.passes.CheckGateDirection "qiskit.transpiler.passes.CheckGateDirection")(\*args, \*\*kwargs)                                     | Check if the two-qubit gates follow the right direction with respect to the coupling map.                                                                                |
| [`CXDirection`](qiskit.transpiler.passes.CXDirection "qiskit.transpiler.passes.CXDirection")(\*args, \*\*kwargs)                                                          | Deprecated: use [`qiskit.transpiler.passes.GateDirection`](qiskit.transpiler.passes.GateDirection "qiskit.transpiler.passes.GateDirection") pass instead.                |
| [`GateDirection`](qiskit.transpiler.passes.GateDirection "qiskit.transpiler.passes.GateDirection")(\*args, \*\*kwargs)                                                    | Modify asymmetric gates to match the hardware coupling direction.                                                                                                        |
| [`MergeAdjacentBarriers`](qiskit.transpiler.passes.MergeAdjacentBarriers "qiskit.transpiler.passes.MergeAdjacentBarriers")(\*args, \*\*kwargs)                            | Return a circuit with any adjacent barriers merged together.                                                                                                             |
| [`RemoveBarriers`](qiskit.transpiler.passes.RemoveBarriers "qiskit.transpiler.passes.RemoveBarriers")(\*args, \*\*kwargs)                                                 | Return a circuit with any barrier removed.                                                                                                                               |
| [`BarrierBeforeFinalMeasurements`](qiskit.transpiler.passes.BarrierBeforeFinalMeasurements "qiskit.transpiler.passes.BarrierBeforeFinalMeasurements")(\*args, \*\*kwargs) | Add a barrier before final measurements.                                                                                                                                 |
| [`RemoveFinalMeasurements`](qiskit.transpiler.passes.RemoveFinalMeasurements "qiskit.transpiler.passes.RemoveFinalMeasurements")(\*args, \*\*kwargs)                      | Remove final measurements and barriers at the end of a circuit.                                                                                                          |
| [`DAGFixedPoint`](qiskit.transpiler.passes.DAGFixedPoint "qiskit.transpiler.passes.DAGFixedPoint")(\*args, \*\*kwargs)                                                    | Check if the DAG has reached a fixed point.                                                                                                                              |
| [`FixedPoint`](qiskit.transpiler.passes.FixedPoint "qiskit.transpiler.passes.FixedPoint")(\*args, \*\*kwargs)                                                             | Check if a property reached a fixed point.                                                                                                                               |
| [`ContainsInstruction`](qiskit.transpiler.passes.ContainsInstruction "qiskit.transpiler.passes.ContainsInstruction")(instruction\_name\[, recurse])                       | An analysis pass to detect if the DAG contains a specific instruction.                                                                                                   |
| [`GatesInBasis`](qiskit.transpiler.passes.GatesInBasis "qiskit.transpiler.passes.GatesInBasis")(\*args, \*\*kwargs)                                                       | Check if all gates in a DAG are in a given set of gates                                                                                                                  |
| [`ConvertConditionsToIfOps`](qiskit.transpiler.passes.ConvertConditionsToIfOps "qiskit.transpiler.passes.ConvertConditionsToIfOps")(\*args, \*\*kwargs)                   | Convert instructions whose `condition` attribute is set to a non-`None` value into the equivalent single-statement `IfElseBlock`.                                        |

